--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
         <!-- TERMS -->
         <div id="terms" class="route">
-          <div class="badge">Rahmenbedingungen</div>
+          <div class="badge">Info</div>
           <h2>Gewinnspiel – Rahmenbedingungen</h2>
           <p><strong>Gewinnspiel nur für arme Menschen gültig.</strong></p>
           <div class="btn-row">
@@ -388,3 +388,4 @@
     </script>
   </body>
 </html>
+
