--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
           </h1>
           <div id="countdown" class="timer">--:--:--</div>
           <div class="btn-row" style="margin-top: 1rem">
-            <button id="btn-skip" class="hidden">Jetzt mitspielen</button>
+            <button id="btn-skip" class="hidden">Weiter</button>
           </div>
         </div>
 
@@ -388,5 +388,6 @@
     </script>
   </body>
 </html>
+
 
 
